# codename_generator

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build_deps.sh  build_release.sh
.github/workflows/: docker-image.yml
data/: adjectives.txt  animals.txt  birds.txt
include/: generator.hpp
src/: generator.cpp  main.cpp
